# cua

./: .all-contributorsrc  .cursorignore  .gitattributes  .gitignore  COMPATIBILITY.md  CONTRIBUTING.md  Dockerfile  LICENSE  LICENSE.md  Package.resolved  Package.swift  README.md  README_quickstart_variations.md  pyproject.toml  pyrightconfig.json
docs/: .prettierrc  (+13 more)
libs/agent/: README.md  pyproject.toml
libs/agent/agent/: README.md  __init__.py
libs/agent/agent/core/: README.md  __init__.py  agent.py  base.py  base_agent.py  callbacks.py  computer_agent.py  experiment.py  factory.py  loop.py  messages.py  provider_config.py  telemetry.py  tools.py  types.py
libs/agent/agent/core/tools/: __init__.py  bash.py  collection.py  computer.py  edit.py
libs/agent/agent/providers/: __init__.py
libs/agent/agent/providers/anthropic/: api_handler.py  loop.py  prompts.py  response_handler.py  utils.py
libs/agent/agent/providers/omni/: __init__.py  action_executor.py  callbacks.py  experiment.py  image_utils.py  loop.py  messages.py  parser.py  tool_manager.py  types.py  utils.py  visualization.py
libs/agent/agent/providers/openai/: api_handler.py  loop.py  prompts.py  response_handler.py  types.py
libs/agent/agent/providers/uitars/: __init__.py  loop.py  prompts.py  utils.py
libs/agent/agent/types/: __init__.py  base.py  messages.py
libs/agent/agent/ui/: __main__.py
libs/agent/agent/ui/gradio/: __init__.py  app.py
libs/agent/tests/: test_agent.py
libs/computer/: README.md  pyproject.toml
libs/computer-server/: pyproject.toml
libs/computer-server/computer_server/: __main__.py  cli.py  main.py  server.py
libs/computer-server/computer_server/diorama/: __init__.py  base.py  diorama.py  draw.py  macos.py
libs/computer-server/computer_server/getters/: README.md  __init__.py  base.py  safari.py
libs/computer-server/computer_server/handlers/: base.py  factory.py  generic.py  linux.py  macos.py  windows.py
libs/computer-server/examples/: __init__.py
libs/computer/computer/: __init__.py  computer.py  diorama_computer.py  helpers.py  models.py  telemetry.py  utils.py
libs/computer/computer/interface/: base.py  factory.py  linux.py  macos.py  models.py  windows.py
libs/computer/computer/providers/: base.py  factory.py  lume_api.py
libs/computer/computer/providers/cloud/: __init__.py  provider.py
libs/computer/computer/providers/lume/: __init__.py  provider.py
libs/computer/computer/providers/lumier/: __init__.py  provider.py
libs/computer/computer/providers/qemu/: __init__.py  provider.py
libs/computer/computer/providers/winsandbox/: __init__.py  logon_script.bat  provider.py  setup_script.ps1
libs/computer/computer/ui/gradio/: app.py
libs/computer/python/computer/: __init__.py  computer.py  helpers.py  telemetry.py
libs/computer/python/computer/interface/: factory.py  linux.py  macos.py
libs/computer/python/computer/providers/: __init__.py  factory.py
libs/computer/tests/: test_computer.py
libs/computer/typescript/: README.md  biome.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsdown.config.ts  vitest.config.ts
libs/computer/typescript/src/: helpers.ts  index.ts  logger.ts  telemetry.ts  types.ts  utils.ts
libs/computer/typescript/src/computer/: computer.ts  defaults.ts  index.ts  types.ts
libs/computer/typescript/src/interface/: base.ts  factory.ts  index.ts  linux.ts  macos.ts  types.ts
libs/computer/typescript/src/providers/: base.ts  factory.ts  index.ts  lume_api.ts
libs/computer/typescript/src/util/: logger.ts  lume.ts
libs/computer/typescript/tests/: index.test.ts  lume_api.test.ts  setup.ts
libs/computer/typescript/tests/computer/: cloud.test.ts  lume.test.ts
libs/computer/typescript/tests/interface/: factory.test.ts  index.test.ts  integration.test.ts  linux.test.ts  macos.test.ts  windows.test.ts
libs/core/: pyproject.toml
libs/core/core/telemetry/: client.py  posthog_client.py  sender.py  telemetry.py
libs/core/tests/: test_posthog_telemetry.py  test_telemetry.py
libs/mcp-server/: README.md  pyproject.toml
libs/mcp-server/mcp_server/: __init__.py  __main__.py  server.py
libs/mcp-server/scripts/: install_mcp_server.sh  run_mcp_server.sh  start_mcp_server.sh
libs/playground-api/: pyproject.toml
libs/playground-api/playground_api/utils/: prompt.py
libs/pylume/: __init__.py  pyproject.toml
libs/pylume/pylume/: __init__.py  lume  models.py  pylume.py  server.py
libs/pylume/tests/: __init__.py  test_basic.py
libs/python/agent2/: README.md  example.py  pyproject.toml
libs/python/agent2/agent/: __init__.py  cli.py  computer_handler.py  decorators.py  responses.py  types.py
libs/python/agent2/agent/adapters/: __init__.py
libs/python/agent2/agent/callbacks/: __init__.py  base.py  image_retention.py  logging.py  pii_anonymization.py
libs/python/agent2/agent/loops/: openai.py  uitars.py
libs/python/agent2/agent/ui/: __init__.py  __main__.py
libs/python/agent2/agent2/: __init__.py  agent.py  decorators.py  types.py
libs/python/agent2/agent2/adapters/: __init__.py  huggingfacelocal_adapter.py
libs/python/agent2/agent2/callbacks/: logging.py
libs/python/agent2/agent2/loops/: __init__.py  omniparser.py
libs/python/pylume/: README.md  pyproject.toml
libs/python/pylume/pylume/: __init__.py  client.py  exceptions.py  server.py
libs/som/: README.md  pyproject.toml
libs/som/som/: __init__.py  detect.py  models.py  ocr.py  visualization.py
libs/som/som/util/: utils.py
libs/typescript/playground/: Dockerfile-UI  Dockerfile-UI-API  README.md  pyproject.toml
libs/typescript/playground/api/: main.py
libs/typescript/playground/app/: page.tsx
libs/typescript/playground/app/[id]/: page.tsx
libs/typescript/playground/app/computers/: page.tsx
libs/typescript/playground/app/hooks/: useComputerStore.ts
libs/typescript/playground/app/settings/: page.tsx
libs/typescript/playground/components/chat/: chat-layout.tsx  chat-list.tsx  chat-topbar.tsx  chat.tsx  model-properties-sidebar.tsx  novnc-sidebar.tsx
libs/typescript/playground/lib/: chat-client.ts  model-helper.ts
(+682 files in other folders)
