[build-system]
build-backend = "pdm.backend"
requires = ["pdm-backend"]

[project]
authors = [{ name = "TryCua", email = "gh@trycua.com" }]
dependencies = []
description = "CUA (Computer Use Agent) mono-repo"
license = { text = "MIT" }
name = "cua-workspace"
readme = "README.md"
requires-python = ">=3.10"
version = "0.1.0"

[project.urls]
repository = "https://github.com/trycua/cua"

[dependency-groups]
dev = []
examples = []

[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "-e agent @ file:///${PROJECT_ROOT}/libs/agent",
    "-e computer @ file:///${PROJECT_ROOT}/libs/computer",
    "-e computer-server @ file:///${PROJECT_ROOT}/libs/computer-server",
    "-e cua-som @ file:///${PROJECT_ROOT}/libs/som",
    "-e mcp-server @ file:///${PROJECT_ROOT}/libs/mcp-server",
    "-e pylume @ file:///${PROJECT_ROOT}/libs/pylume",
    "black>=23.0.0",
    "ipykernel>=6.29.5",
    "jedi>=0.19.2",
    "jupyter>=1.0.0",
    "mypy>=1.10.0",
    "ruff>=0.9.2",
    "types-requests>=2.31.0",
]
docs = ["mkdocs-material>=9.2.0", "mkdocs>=1.5.0"]
test = [
    "aioresponses>=0.7.4",
    "pytest-asyncio>=0.21.1",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.10.0",
    "pytest-xdist>=3.6.1",
    "pytest>=8.0.0",
]

[tool.pdm.resolution]
respect-source-order = true

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
fix = true
line-length = 100
select = ["B", "E", "F", "I"]
target-version = "py310"

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
check_untyped_defs = true
disallow_untyped_defs = true
ignore_missing_imports = true
python_version = "3.10"
show_error_codes = true
strict = true
warn_return_any = true
warn_unused_ignores = false

[tool.pytest.ini_options]
asyncio_mode = "auto"
python_files = "test_*.py"
testpaths = ["libs/*/tests"]
