[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cua-mcp-server"
description = "MCP Server for Computer-Use Agent (CUA)"
readme = "README.md"
requires-python = ">=3.10,<3.13"
version = "0.1.0"
authors = [
    {name = "TryCua", email = "gh@trycua.com"}
]
dependencies = [
    "mcp>=1.6.0,<2.0.0",
    "cua-agent[all]>=0.1.0,<0.2.0",
    "cua-computer>=0.1.0,<0.2.0",
]

[project.scripts]
cua-mcp-server = "mcp_server.server:main"

[tool.pdm]
distribution = true

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.9.1",
    "ruff>=0.0.292",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
line-length = 100
target-version = "py310"
select = ["E", "F", "B", "I"]
fix = true
