[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "playground-api"
version = "0.1.0"
description = "CUA Playground API Server"
authors = [
    {name = "TryCua", email = "gh@trycua.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "fastapi>=0.111.1",
    "uvicorn>=0.30.3",
    "python-dotenv>=1.0.1",
    "pydantic>=2.8.2",
    "python-multipart>=0.0.9",
    "httpx>=0.27.0",
    "openai>=1.37.1",
    "requests>=2.32.3",
    "PyYAML>=6.0.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "httpx>=0.24.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["playground_api*"]
