[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project]
name = "cua-agent2"
version = "0.1.0"
description = "CUA Agent2 - Decorator-based Computer Use Agent with liteLLM integration"
readme = "README.md"
authors = [
    { name = "TryCua", email = "gh@trycua.com" }
]
dependencies = [
    "httpx>=0.27.0",
    "aiohttp>=3.9.3",
    "asyncio",
    "anyio>=4.4.1",
    "typing-extensions>=4.12.2",
    "pydantic>=2.6.4",
    "rich>=13.7.1",
    "python-dotenv>=1.0.1",
    "cua-computer>=0.3.0,<0.4.0",
    "cua-core>=0.1.0,<0.2.0",
    "certifi>=2024.2.2",
    "litellm>=1.0.0"
]
requires-python = ">=3.11"

[project.optional-dependencies]
anthropic = [
    "anthropic>=0.49.0",
    "boto3>=1.35.81",
]
openai = [
    "openai>=1.14.0",
    "httpx>=0.27.0",
]
all = [
    "anthropic>=0.49.0",
    "boto3>=1.35.81",
    "openai>=1.14.0",
    "httpx>=0.27.0",
]

[tool.uv]
constraint-dependencies = ["fastrtc>0.43.0", "mlx-audio>0.2.3"]

[tool.pdm]
distribution = true

[tool.pdm.build]
includes = ["agent2/"]
